--- a/GUI/src/main/resources/fxml/menuJuego.fxml
+++ b/GUI/src/main/resources/fxml/menuJuego.fxml
@@ -7,9 +7,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.pantallas.principal.MenuJuegoController">
    <children>
-
-
-      <VBox layoutX="-1.0" layoutY="-1.0" prefHeight="195.0" prefWidth="130.0">
+      <VBox layoutX="14.0" prefHeight="195.0" prefWidth="130.0">
          <children>
             <Label alignment="TOP_CENTER" prefHeight="27.0" prefWidth="133.0" text="Estadísticas" textAlignment="CENTER">
                <font>
@@ -19,74 +17,26 @@
                   <Insets top="5.0" />
                </padding>
             </Label>
-            <Label alignment="CENTER" prefHeight="26.0" prefWidth="130.0" text="Label">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <TextField />
-            <Label alignment="CENTER" layoutX="10.0" layoutY="37.0" prefHeight="26.0" prefWidth="130.0" text="Label">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <TextField layoutX="10.0" layoutY="63.0" />
+            <TextArea fx:id="statsArea" prefHeight="200.0" prefWidth="200.0" />
          </children>
       </VBox>
 
 
 
-      <VBox layoutX="-2.0" layoutY="192.0" prefHeight="208.0" prefWidth="130.0">
+      <VBox layoutX="14.0" layoutY="195.0" prefHeight="195.0" prefWidth="130.0">
          <children>
             <Label alignment="TOP_CENTER" prefHeight="27.0" prefWidth="133.0" text="Equipo" textAlignment="CENTER">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" prefHeight="26.0" prefWidth="130.0" text="Label">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <TextField />
-            <Label alignment="CENTER" layoutX="10.0" layoutY="37.0" prefHeight="26.0" prefWidth="130.0" text="Label">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <TextField layoutX="10.0" layoutY="63.0" />
+            <TextArea fx:id="equipoArea" prefHeight="168.0" prefWidth="111.0" />
          </children>
       </VBox>
 
-
-      <Pane id="minimapa" layoutX="435.0" prefHeight="400.0" prefWidth="165.0" />
-
-      <BorderPane id="pantallaJuego" layoutX="136.0" layoutY="37.0" prefHeight="361.0" prefWidth="299.0">
-         <center>
-            <Button alignment="CENTER" contentDisplay="CENTER" prefHeight="285.0" prefWidth="144.0" text="Juego" />
-         </center>
-
-         <top>
-            <Button prefHeight="0.0" prefWidth="299.0" text="Norte" />
-         </top>
-
-         <bottom>
-            <Button prefHeight="60.0" prefWidth="304.0" text="Sur" />
-         </bottom>
-
-         <left>
-            <Button prefHeight="345.0" prefWidth="73.0" text="Este" />
-         </left>
-
-         <right>
-            <Button prefHeight="326.0" prefWidth="82.0" text="Oeste" />
-         </right>
-
-      </BorderPane>
-
       <Pane layoutX="136.0" prefHeight="33.0" prefWidth="299.0">
          <children>
-            <TextField layoutX="150.0" layoutY="7.0" prefHeight="25.0" prefWidth="149.0" />
+            <TextField fx:id="tiempoJugado" layoutX="150.0" layoutY="7.0" prefHeight="25.0" prefWidth="149.0" />
             <Label alignment="CENTER" layoutX="5.0" layoutY="6.0" prefHeight="26.0" prefWidth="143.0" text="Tiempo de Juego:">
                <font>
                   <Font size="14.0" />
@@ -94,6 +44,7 @@
             </Label>
          </children>
       </Pane>
+      <TextArea fx:id="consoleArea" layoutX="180.0" layoutY="46.0" prefHeight="339.0" prefWidth="387.0" />
 
    </children>
 </AnchorPane>
